--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                 <a href="https://www.youtube.com/channel/UCWHux1pNqfKB0JL5Tr0srCg"><i class="fab fa-youtube"></i></a>
                 <a href="8910351512"><i class="fab fa-whatsapp"></i></a>
             </div>
-            <p style="margin-top: 30px;">&copy; 2023 Divine Astrology. All Rights Reserved.</p>
+            <p style="margin-top: 30px;">&copy; 2025 Astro Taradham. All Rights Reserved.</p>
         </div>
     </footer>
 
